Test/Reconstruction/Arith/TightBounds.expected
Test/Reconstruction/Arith/TightBounds.lean:1:0: error: object file './.lake/build/lib/Smt/Reconstruct/Arith.olean' of module Smt.Reconstruct.Arith does not exist
Test/Reconstruction/Arith/TightBounds.lean:3:5: error: unknown namespace 'Smt.Reconstruct.Arith'
Test/Reconstruction/Arith/TightBounds.lean:5:24: error: expected token
Test/Reconstruction/Arith/TightBounds.lean:9:32: error: expected token
Test/Reconstruction/Arith/TightBounds.lean:13:24: error: expected token
